[gd_scene load_steps=16 format=3 uid="uid://bpgr51mrhhw6q"]

[ext_resource type="Script" path="res://UI/game_over_screen.gd" id="1_5bb1r"]
[ext_resource type="Texture2D" uid="uid://dewja6uhv0wy2" path="res://Assets/UI/PauseEndMenu_TextureRect.png" id="2_fq051"]
[ext_resource type="FontFile" uid="uid://bvakc1furn7ig" path="res://UI/Coffee Spark.ttf" id="3_l74pc"]
[ext_resource type="FontFile" uid="uid://ck2or8uouxlg" path="res://UI/LTSaeada-ExtraBold.otf" id="4_2eekt"]
[ext_resource type="Texture2D" uid="uid://nvgrpwkfnck8" path="res://Assets/UI/RestartButton_Normal.png" id="5_nd76m"]
[ext_resource type="Texture2D" uid="uid://cc5gwsl2e3w5m" path="res://Assets/UI/RestartButton_Pressed.png" id="6_f6h8v"]
[ext_resource type="Texture2D" uid="uid://co6wvx887si40" path="res://Assets/UI/RestartButton_HoverFocused.png" id="7_l3tr6"]
[ext_resource type="Texture2D" uid="uid://v0fl1dvv5j6f" path="res://Assets/UI/RestartButton_Focused.png" id="8_kb3xa"]
[ext_resource type="Texture2D" uid="uid://clbi8q7wmbijy" path="res://Assets/UI/MainMenu_Normal.png" id="9_pdfrx"]
[ext_resource type="Texture2D" uid="uid://do84ydbytskca" path="res://Assets/UI/MainMenu_Pressed.png" id="10_otgsw"]
[ext_resource type="Texture2D" uid="uid://bnoul851ybvcl" path="res://Assets/UI/MainMenu_HoverFocused.png" id="11_2r8h1"]
[ext_resource type="Texture2D" uid="uid://bgujjvyke4w4m" path="res://Assets/UI/MainMenu_Focused.png" id="12_kyped"]

[sub_resource type="LabelSettings" id="LabelSettings_t416g"]
font = ExtResource("3_l74pc")
font_size = 70
font_color = Color(0.184314, 0.027451, 0.0156863, 1)

[sub_resource type="LabelSettings" id="LabelSettings_m7048"]
font = ExtResource("4_2eekt")
font_size = 30
font_color = Color(0.76, 0.581907, 0.1976, 1)

[sub_resource type="LabelSettings" id="LabelSettings_n1ys4"]
font = ExtResource("3_l74pc")
font_size = 40
font_color = Color(0.760784, 0.580392, 0.196078, 1)

[node name="GameOverScreen" type="CanvasLayer"]
script = ExtResource("1_5bb1r")

[node name="MarginContainer2" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 250
theme_override_constants/margin_top = 85
theme_override_constants/margin_right = 250
theme_override_constants/margin_bottom = 85

[node name="TextureRect" type="TextureRect" parent="MarginContainer2"]
layout_mode = 2
texture = ExtResource("2_fq051")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 265
theme_override_constants/margin_top = 155
theme_override_constants/margin_right = 265

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 35

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "You Died!"
label_settings = SubResource("LabelSettings_t416g")
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
theme_override_font_sizes/font_size = 26
text = "Your Adoring Fans:"
label_settings = SubResource("LabelSettings_m7048")
horizontal_alignment = 1

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.501961, 0.501961, 0.501961, 1)
theme_override_colors/font_outline_color = Color(0.501961, 0.501961, 0.501961, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 26
text = "0"
label_settings = SubResource("LabelSettings_n1ys4")
horizontal_alignment = 1

[node name="RetryButton" type="TextureButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("5_nd76m")
texture_pressed = ExtResource("6_f6h8v")
texture_hover = ExtResource("7_l3tr6")
texture_focused = ExtResource("8_kb3xa")
stretch_mode = 3

[node name="MainMenuButton" type="TextureButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("9_pdfrx")
texture_pressed = ExtResource("10_otgsw")
texture_hover = ExtResource("11_2r8h1")
texture_focused = ExtResource("12_kyped")
stretch_mode = 3

[connection signal="pressed" from="MarginContainer/VBoxContainer/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
